Update displayed name

--- a/src/components/List/List.html
+++ b/src/components/List/List.html
@@ -1,6 +1,6 @@
 <ul class="ms-List">
   <div class="ms-ListItem is-unread is-selectable">
-    <span class="ms-ListItem-primaryText">Tanya Pierce</span>
+    <span class="ms-ListItem-primaryText">Alton Lafferty</span>
     <span class="ms-ListItem-secondaryText">Meeting notes</span>
     <span class="ms-ListItem-tertiaryText">Today we discussed the importance of a, b, and c in regards to d.</span>
     <span class="ms-ListItem-metaText">2:42p</span>
@@ -13,7 +13,7 @@
     </div>
   </div>
   <div class="ms-ListItem is-unread is-selectable">
-    <span class="ms-ListItem-primaryText">Tanya Pierce</span>
+    <span class="ms-ListItem-primaryText">Alton Lafferty</span>
     <span class="ms-ListItem-secondaryText">Meeting notes</span>
     <span class="ms-ListItem-tertiaryText">Today we discussed the importance of a, b, and c in regards to d.</span>
     <span class="ms-ListItem-metaText">2:42p</span>
@@ -26,7 +26,7 @@
     </div>
   </div>
   <div class="ms-ListItem is-unread is-selectable">
-    <span class="ms-ListItem-primaryText">Tanya Pierce</span>
+    <span class="ms-ListItem-primaryText">Alton Lafferty</span>
     <span class="ms-ListItem-secondaryText">Meeting notes</span>
     <span class="ms-ListItem-tertiaryText">Today we discussed the importance of a, b, and c in regards to d.</span>
     <span class="ms-ListItem-metaText">2:42p</span>
@@ -39,7 +39,7 @@
     </div>
   </div>
   <div class="ms-ListItem is-selectable">
-    <span class="ms-ListItem-primaryText">Tanya Pierce</span>
+    <span class="ms-ListItem-primaryText">Alton Lafferty</span>
     <span class="ms-ListItem-secondaryText">Meeting notes</span>
     <span class="ms-ListItem-tertiaryText">Today we discussed the importance of a, b, and c in regards to d.</span>
     <span class="ms-ListItem-metaText">2:42p</span>
@@ -52,7 +52,7 @@
     </div>
   </div>
   <div class="ms-ListItem is-selected is-selectable">
-    <span class="ms-ListItem-primaryText">Tanya Pierce</span>
+    <span class="ms-ListItem-primaryText">Alton Lafferty</span>
     <span class="ms-ListItem-secondaryText">Meeting notes</span>
     <span class="ms-ListItem-tertiaryText">Today we discussed the importance of a, b, and c in regards to d.</span>
     <span class="ms-ListItem-metaText">2:42p</span>
@@ -65,7 +65,7 @@
     </div>
   </div>
   <div class="ms-ListItem is-selectable">
-    <span class="ms-ListItem-primaryText">Tanya Pierce</span>
+    <span class="ms-ListItem-primaryText">Alton Lafferty</span>
     <span class="ms-ListItem-secondaryText">Meeting notes</span>
     <span class="ms-ListItem-tertiaryText">Today we discussed the importance of a, b, and c in regards to d.</span>
     <span class="ms-ListItem-metaText">2:42p</span>
@@ -78,7 +78,7 @@
     </div>
   </div>
   <div class="ms-ListItem is-selectable">
-    <span class="ms-ListItem-primaryText">Tanya Pierce</span>
+    <span class="ms-ListItem-primaryText">Alton Lafferty</span>
     <span class="ms-ListItem-secondaryText">Meeting notes</span>
     <span class="ms-ListItem-tertiaryText">Today we discussed the importance of a, b, and c in regards to d.</span>
     <span class="ms-ListItem-metaText">2:42p</span>
@@ -91,7 +91,7 @@
     </div>
   </div>
   <div class="ms-ListItem is-selectable">
-    <span class="ms-ListItem-primaryText">Tanya Pierce</span>
+    <span class="ms-ListItem-primaryText">Alton Lafferty</span>
     <span class="ms-ListItem-secondaryText">Meeting notes</span>
     <span class="ms-ListItem-tertiaryText">Today we discussed the importance of a, b, and c in regards to d.</span>
     <span class="ms-ListItem-metaText">2:42p</span>
