--- a/src/components/ListItem/ListItem.Selectable.html
+++ b/src/components/ListItem/ListItem.Selectable.html
@@ -1,5 +1,5 @@
 <div class="ms-ListItem is-selectable">
-  <span class="ms-ListItem-primaryText">Tanya Pierce</span>
+  <span class="ms-ListItem-primaryText">Alton Lafferty</span>
   <span class="ms-ListItem-secondaryText">Meeting notes</span>
   <span class="ms-ListItem-tertiaryText">Today we discussed the importance of a, b, and c in regards to d.</span>
   <span class="ms-ListItem-metaText">2:42p</span>
