Update name/path of CDN license

--- a/src/less/_Fabric.Icons.Font.less
+++ b/src/less/_Fabric.Icons.Font.less
@@ -6,7 +6,7 @@
 // Icon font-family definition
 
 /*
-  Your use of the content in the files referenced here are subject to the terms of the license at https://appsforoffice.microsoft.com/fabric/fonts/License.txt
+  Your use of the content in the files referenced here are subject to the terms of the license at https://appsforoffice.microsoft.com/fabric/Segoe UI and Fabric CDN License.txt
 */
 
 
