- IE needs the left as well, the label was off to the right side of the searchbox.

--- a/src/components/SearchBox/SearchBox.less
+++ b/src/components/SearchBox/SearchBox.less
@@ -87,6 +87,7 @@
 .ms-SearchBox-label {
   position: absolute;
   top: 0;
+  left: 0;
   padding-left: 8px;
   line-height: 32px;
   color: @ms-color-neutralSecondary;
