--- a/src/components/Dialog/Dialog.Multiline.html
+++ b/src/components/Dialog/Dialog.Multiline.html
@@ -1,6 +1,6 @@
 <!-- Copyright (c) Microsoft. All rights reserved. Licensed under the MIT license. See LICENSE in the project root for license information. -->
 
-<div class="ms-Dialog">
+<div class="ms-Dialog ms-Dialog--multiline">
   <div class="ms-Overlay"></div>
   <div class="ms-Dialog-main">
     <button class="ms-Dialog-button ms-Dialog-button--close">
