Add overlay variant templates. Update individual component example page with styles for displaying overlays

--- a/src/templates/individual-component-example.html
+++ b/src/templates/individual-component-example.html
@@ -63,6 +63,13 @@
       margin-right: 30px;
     }
 
+    .sample-wrapper .ms-Overlay {
+      display: block;
+      position: relative;
+      height: 300px;
+      box-shadow: 0 0 8px 0 rgba(0,0,0,0.3); // For visibility of lighter variant
+    }
+
 
     .ms-ContextualMenu.is-open  {
       position: relative;
