Add panel variant templates. Update component example html file overlay styles

--- a/src/templates/individual-component-example.html
+++ b/src/templates/individual-component-example.html
@@ -63,7 +63,7 @@
       margin-right: 30px;
     }
 
-    .sample-wrapper .ms-Overlay {
+    .sample-wrapper > .ms-Overlay {
       display: block;
       position: relative;
       height: 300px;
