Update peoplepicker personas. Update variant templates and json for ordering

--- a/src/components/PeoplePicker/PeoplePicker.Compact.html
+++ b/src/components/PeoplePicker/PeoplePicker.Compact.html
@@ -1,6 +1,6 @@
 <!-- Copyright (c) Microsoft. All rights reserved. Licensed under the MIT license. See LICENSE in the project root for license information. -->
 
-<div class="ms-PeoplePicker">
+<div class="ms-PeoplePicker ms-PeoplePicker--compact">
   <div class="ms-PeoplePicker-searchBox">
     <input class="ms-PeoplePicker-searchField" type="text">
   </div>
@@ -11,9 +11,9 @@
               <ul class="ms-PeoplePicker-resultList">
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn ms-PeoplePicker-resultBtn--compact">
-                      <div class="ms-Persona ms-Persona--xs">
+                      <div class="ms-Persona ms-Persona--xs ms-Persona--square">
                         <div class="ms-Persona-imageArea">
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png">
                           <div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
@@ -26,9 +26,9 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn ms-PeoplePicker-resultBtn--compact">
-                      <div class="ms-Persona ms-Persona--xs">
+                      <div class="ms-Persona ms-Persona--xs ms-Persona--square">
                         <div class="ms-Persona-imageArea">
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png">
                           <div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
@@ -46,9 +46,9 @@
               <ul class="ms-PeoplePicker-resultList">
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn ms-PeoplePicker-resultBtn--compact">
-                      <div class="ms-Persona ms-Persona--xs">
+                      <div class="ms-Persona ms-Persona--xs ms-Persona--square">
                         <div class="ms-Persona-imageArea">
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png">
                           <div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
@@ -61,9 +61,9 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn ms-PeoplePicker-resultBtn--compact">
-                      <div class="ms-Persona ms-Persona--xs">
+                      <div class="ms-Persona ms-Persona--xs ms-Persona--square">
                         <div class="ms-Persona-imageArea">
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Douglas Fielder</div>
@@ -75,9 +75,9 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn ms-PeoplePicker-resultBtn--compact">
-                      <div class="ms-Persona ms-Persona--xs">
+                      <div class="ms-Persona ms-Persona--xs ms-Persona--square">
                         <div class="ms-Persona-imageArea">
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Grant Steel</div>
@@ -90,9 +90,9 @@
                           <ul class="ms-PeoplePicker-resultList">
                               <li class="ms-PeoplePicker-result">
                                 <button class="ms-PeoplePicker-resultBtn ms-PeoplePicker-resultBtn--compact">
-                                  <div class="ms-Persona ms-Persona--xs">
+                                  <div class="ms-Persona ms-Persona--xs ms-Persona--square">
                                     <div class="ms-Persona-imageArea">
-                                      <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">   
+                                      <img class="ms-Persona-image" src="../persona/Persona.Person2.png">   
                                       <div class="ms-Persona-presence"></div>
                                     </div>
                                     <div class="ms-Persona-details">
@@ -105,9 +105,9 @@
                               </li>
                               <li class="ms-PeoplePicker-result">
                                 <button class="ms-PeoplePicker-resultBtn ms-PeoplePicker-resultBtn--compact">
-                                  <div class="ms-Persona ms-Persona--xs">
+                                  <div class="ms-Persona ms-Persona--xs ms-Persona--square">
                                     <div class="ms-Persona-imageArea">
-                                      <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"> 
+                                      <img class="ms-Persona-image" src="../persona/Persona.Person2.png"> 
                                       <div class="ms-Persona-presence"></div>
                                     </div>
                                     <div class="ms-Persona-details">
@@ -123,9 +123,9 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn ms-PeoplePicker-resultBtn--compact">
-                      <div class="ms-Persona ms-Persona--xs">
+                      <div class="ms-Persona ms-Persona--xs ms-Persona--square">
                         <div class="ms-Persona-imageArea">
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Harvey Wallin</div>
@@ -137,9 +137,9 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn ms-PeoplePicker-resultBtn--compact">
-                      <div class="ms-Persona ms-Persona--xs">
+                      <div class="ms-Persona ms-Persona--xs ms-Persona--square">
                         <div class="ms-Persona-imageArea">
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Marcus Lauer</div>
