--- a/src/components/PeoplePicker/PeoplePicker.Disconnected.html
+++ b/src/components/PeoplePicker/PeoplePicker.Disconnected.html
@@ -11,9 +11,9 @@
               <ul class="ms-PeoplePicker-resultList">
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Russel Miller</div>
@@ -25,9 +25,9 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Douglas Fielder</div>
@@ -44,9 +44,9 @@
               <ul class="ms-PeoplePicker-resultList">
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Russel Miller</div>
@@ -58,9 +58,9 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Douglas Fielder</div>
@@ -72,9 +72,9 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Grant Steel</div>
@@ -87,9 +87,9 @@
                           <ul class="ms-PeoplePicker-resultList">
                               <li class="ms-PeoplePicker-result">
                                 <button class="ms-PeoplePicker-resultBtn">
-                                  <div class="ms-Persona">
+                                  <div class="ms-Persona ms-Persona--square">
                                     <div class="ms-Persona-imageArea">
-                                      <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"> 
+                                      <img class="ms-Persona-image" src="../persona/Persona.Person2.png"> 
                                       <div class="ms-Persona-presence"></div>
                                     </div>
                                     <div class="ms-Persona-details">
@@ -102,9 +102,9 @@
                               </li>
                               <li class="ms-PeoplePicker-result">
                                 <button class="ms-PeoplePicker-resultBtn">
-                                  <div class="ms-Persona">
+                                  <div class="ms-Persona ms-Persona--square">
                                     <div class="ms-Persona-imageArea">
-                                      <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">    
+                                      <img class="ms-Persona-image" src="../persona/Persona.Person2.png">    
                                       <div class="ms-Persona-presence"></div>
                                     </div>
                                     <div class="ms-Persona-details">
@@ -120,9 +120,9 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Harvey Wallin</div>
@@ -134,9 +134,9 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Marcus Lauer</div>
