--- a/src/components/PeoplePicker/PeoplePicker.html
+++ b/src/components/PeoplePicker/PeoplePicker.html
@@ -11,10 +11,10 @@
               <ul class="ms-PeoplePicker-resultList">
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
                           <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Russel Miller</div>
@@ -26,10 +26,10 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
                           <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Douglas Fielder</div>
@@ -46,10 +46,10 @@
               <ul class="ms-PeoplePicker-resultList">
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
                           <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Russel Miller</div>
@@ -61,10 +61,10 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
                           <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Douglas Fielder</div>
@@ -76,10 +76,10 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
                           <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Grant Steel</div>
@@ -92,10 +92,10 @@
                           <ul class="ms-PeoplePicker-resultList">
                               <li class="ms-PeoplePicker-result">
                                 <button class="ms-PeoplePicker-resultBtn">
-                                  <div class="ms-Persona">
+                                  <div class="ms-Persona ms-Persona--square">
                                     <div class="ms-Persona-imageArea">
                                       <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                                      <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">                                      <div class="ms-Persona-presence"></div>
+                                      <img class="ms-Persona-image" src="../persona/Persona.Person2.png">                                      <div class="ms-Persona-presence"></div>
                                     </div>
                                     <div class="ms-Persona-details">
                                       <div class="ms-Persona-primaryText">Bill B. (billb)</div>
@@ -107,10 +107,10 @@
                               </li>
                               <li class="ms-PeoplePicker-result">
                                 <button class="ms-PeoplePicker-resultBtn">
-                                  <div class="ms-Persona">
+                                  <div class="ms-Persona ms-Persona--square">
                                     <div class="ms-Persona-imageArea">
                                       <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                                      <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">                                      <div class="ms-Persona-presence"></div>
+                                      <img class="ms-Persona-image" src="../persona/Persona.Person2.png">                                      <div class="ms-Persona-presence"></div>
                                     </div>
                                     <div class="ms-Persona-details">
                                       <div class="ms-Persona-primaryText">Grant Steel (bask)</div>
@@ -125,10 +125,10 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
                           <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Harvey Wallin</div>
@@ -140,10 +140,10 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
                           <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Marcus Lauer</div>
