--- a/src/components/PeoplePicker/PeoplePicker.FacePile.html
+++ b/src/components/PeoplePicker/PeoplePicker.FacePile.html
@@ -1,6 +1,6 @@
 <!-- Copyright (c) Microsoft. All rights reserved. Licensed under the MIT license. See LICENSE in the project root for license information. -->
 
-<div class="ms-PeoplePicker">
+<div class="ms-PeoplePicker ms-PeoplePicker--facePile">
   <label class="ms-Label">People picker</label>
   <div class="ms-PeoplePicker-searchBox">
     <input class="ms-PeoplePicker-searchField" type="text">
@@ -11,10 +11,10 @@
               <ul class="ms-PeoplePicker-resultList">
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
                           <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Russel Miller</div>
@@ -25,10 +25,10 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
                           <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Douglas Fielder</div>
@@ -39,10 +39,10 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
                           <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png">
                           <div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
@@ -54,10 +54,10 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
                           <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png">
                           <div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
@@ -69,10 +69,10 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
                           <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Harvey Wallin</div>
@@ -83,10 +83,10 @@
                   </li>
                   <li class="ms-PeoplePicker-result">
                     <button class="ms-PeoplePicker-resultBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
                           <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png"><div class="ms-Persona-presence"></div>
                         </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Marcus Lauer</div>
