--- a/src/components/Link/Link.less
+++ b/src/components/Link/Link.less
@@ -7,6 +7,8 @@
 
 
 .ms-Link {
+  .ms-font-m;
+  .ms-u-normalize;
   color: @ms-color-themePrimary;
   text-decoration: none;
   cursor: pointer;
@@ -25,6 +27,5 @@
 //== Modifier: Hero Links
 //
 .ms-Link.ms-Link--hero {
-  font-family: @ms-font-family-semilight;
   padding: 2px 8px 4px;
 }
