--- a/src/components/Link/Link.less
+++ b/src/components/Link/Link.less
@@ -7,8 +7,6 @@
 
 
 .ms-Link {
-  .ms-font-m;
-  .ms-u-normalize;
   color: @ms-color-themePrimary;
   text-decoration: none;
   cursor: pointer;
@@ -27,5 +25,6 @@
 //== Modifier: Hero Links
 //
 .ms-Link.ms-Link--hero {
+  font-family: @ms-font-family-semilight;
   padding: 2px 8px 4px;
 }
