--- a/src/components/Link/Link.Hero.html
+++ b/src/components/Link/Link.Hero.html
@@ -1,3 +1,3 @@
 <!-- Copyright (c) Microsoft. All rights reserved. Licensed under the MIT license. See LICENSE in the project root for license information. -->
 
-<a href="#" class="ms-font-l ms-Link ms-Link--hero">Link to a webpage</a>
+<a href="#" class="ms-Link ms-Link--hero">Link to a webpage</a>
