Update tab state comment. Use variable for media query
Update selected state comment for tabs and swap a hard-coded px value for a screen-size variable in a media query

--- a/src/components/Pivot/Pivot.less
+++ b/src/components/Pivot/Pivot.less
@@ -107,7 +107,7 @@
       background-color: @ms-color-themePrimary;
     }
 
-    // Selected state
+    //== State: Selected
     &.is-selected {
       background-color: @ms-color-themePrimary;
       color: @ms-color-white;
@@ -129,7 +129,7 @@
 
 
 
-@media (min-width: 640px) {
+@media (min-width: @ms-screen-lg-min) {
   .ms-Pivot-link {
     font-size: @ms-font-size-m;
   }
