Update markup for link - font size inherits from parent. Update callout link style

--- a/src/components/Callout/Callout.less
+++ b/src/components/Callout/Callout.less
@@ -155,6 +155,10 @@
   font-size: @ms-font-size-s;
 }
 
+.ms-Callout-link {
+  font-size: @ms-font-size-m;
+}
+
 .ms-Callout-actions {
   position: relative;
   margin-top: 20px;
